@@ -1,4 +1,7 @@
 CHANGELOG
 ---------
+* Sun Nov 29 2009 Tom G. Christensen <irixpkg@jupiterrise.com> - 2.4.6-2
+- libpython.so must be linked with -lpthread on IRIX 6.2
+
 * Sun Oct 11 2009 Tom G. Christensen <irixpkg@jupiterrise.com> - 2.4.6-1
 - Update to 2.4.6
